--- a/css/slyles.css
+++ b/css/slyles.css
@@ -150,30 +150,7 @@ img {
   margin: 0 auto;
   margin-bottom: 48px;
 }
-.hero-banner-button {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.04em;
-  color: rgba(255, 255, 255, 1);
-  background-color: #4d5ae5;
-  cursor: pointer;
-  display: block;
-  min-width: 169px;
-  border-radius: 4px;
-  padding: 16px 32px;
-  height: 56px;
-  border: none;
-  text-align: center;
-  margin: 0 auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.hero-banner-button:hover {
-  background-color: rgba(64, 75, 191, 1);
-}
-.hero-banner-button:focus {
-  background-color: #404bbf;
-}
+
 .advanteges-list {
   display: flex;
   gap: 24px;
@@ -443,6 +420,40 @@ footer {
 .subscribe {
   margin-left: auto;
 }
+.subscribe-button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: rgba(255, 255, 255, 1);
+  background-color: #4d5ae5;
+  cursor: pointer;
+  display:inline-flex;
+  align-items: center;
+  min-width: 165px;
+  border-radius: 4px;
+  padding: 8px 24px;
+  height: 40px;
+  border: none;
+  text-align: center;
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-button:hover {
+  background-color: #31d0aa;
+}
+.subscribe-button:focus {
+  background-color: #31d0aa;
+}
+.icon-send {
+  fill: #f4f4fd;
+  margin-left: auto;
+}
+.subscribe-form-label {
+  display: flex;
+  gap: 16px;
+  flex-direction: row;
+}
 .backdrop {
   opacity: 0;
   visibility: hidden;
@@ -476,10 +487,12 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .backdrop:not(.is-open) .modal {
 transform: translate(-50%, -100%);
 }
-.subscribe{
-
+.form-modal {
+display: flex;
+flex-direction: column;
+padding: 24px;
 }
-.subscribe-button {
+.modal-btn-send {
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -488,26 +501,79 @@ transform: translate(-50%, -100%);
   background-color: #4d5ae5;
   cursor: pointer;
   display: block;
-  min-width: 165px;
+  min-width: 169px;
   border-radius: 4px;
-  padding: 8px 24px;
-  height: 40px;
+  padding: 16px 32px;
+  height: 56px;
   border: none;
   text-align: center;
   margin: 0 auto;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.subscribe-button:hover {
-  background-color: #31d0aa;
+.modal-btn-send:hover {
+  background-color: rgba(64, 75, 191, 1);
 }
-.subscribe-button:focus {
-  background-color: #31d0aa;
+.hero-ba.modal-btn-send:focus {
+  background-color: #404bbf;
 }
-.icon-send {
+.privacy {
+  text-decoration: underline;
+  color: #4d5ae5;
+}
+.checkbox {
+display: none;
+}
+.form-modal-title{
+  font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.02em;
+text-align: center;
+margin-bottom: 16px;
+}
+.button-close {
+  width: 5%;
+  align-self: flex-end;
+  border-radius: 50%;
+  border: none;
+width: 24px;
+height: 24px;
+margin-bottom: 24px;
+
+}
+.button-close:hover,
+.button-close:focus {
+  background-color: #4d5ae5;
   fill: #f4f4fd;
 }
-.subscribe-form-label {
-  display: flex;
-  gap: 16px;
-  flex-direction: row;
+.checkbox-icon {
+  
+align-self: flex-start;
+border-radius: 4px;
+width: 16px;
+height: 16px;
+
+border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+fill: #f4f4fd;
 }
+.checkbox-icon:hover,
+.checkbox-icon:focus {
+  background-color: #4d5ae5;
+  fill: #f4f4fd;}
+  .input-modal{
+    margin-bottom: 8px;
+  }
+  .textarea{
+    margin-bottom: 16px;
+  }
+  .checkbox{
+    margin-bottom: 24px;
+  }
+  .privacy-label {
+font-weight: 400;
+font-size: 12px;
+line-height: 117%;
+letter-spacing: 0.04em;
+  }
