--- a/css/slyles.css
+++ b/css/slyles.css
@@ -310,18 +310,19 @@ img {
   row-gap: 48px;
 }
 .portfolio-list-item {
-width: calc((100% - 48px) / 3);
- transition: box-shadow 250ms cubic-bezier(0.4,0,0.2,1);
+  width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-list-item:hover {
-  box-shadow:  0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .portfolio-image-conteiner {
   position: relative;
   overflow: hidden;
 }
 
- .portfolio-list-item-text-hidden {
+.portfolio-list-item-text-hidden {
   position: absolute;
   top: 0;
   font-size: 16px;
@@ -417,10 +418,30 @@ footer {
 .social-icon-link-footer:focus {
   background-color: #31d0aa;
 }
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+}
 .subscribe {
   margin-left: auto;
 }
+.footer-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+}
+.footer-input::placeholder {
+  color: #ffffff;
+}
 .subscribe-button {
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -428,7 +449,8 @@ footer {
   color: rgba(255, 255, 255, 1);
   background-color: #4d5ae5;
   cursor: pointer;
-  display:inline-flex;
+  display: flex;
+  justify-content: center;
   align-items: center;
   min-width: 165px;
   border-radius: 4px;
@@ -447,25 +469,21 @@ footer {
 }
 .icon-send {
   fill: #f4f4fd;
-  margin-left: auto;
+  margin-left: 16px;
 }
-.subscribe-form-label {
-  display: flex;
-  gap: 16px;
-  flex-direction: row;
-}
+
 .backdrop {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-position: fixed;
-top:0;
-left:0;
-width: 100%;
-height: 100%;
-background-color: rgba(46, 47, 66, 0.4);
-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            visibility 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open {
   opacity: 1;
@@ -473,31 +491,176 @@ transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
   pointer-events: auto;
 }
 .modal {
+  padding: 72px 24px 24px 24px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-border-radius: 4px;
-width: 408px;
-min-height: 584px;
-box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
-background-color: #fcfcfc;
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 4px;
+  width: 408px;
+  min-height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop:not(.is-open) .modal {
-transform: translate(-50%, -100%);
+  transform: translate(-50%, -100%);
 }
 .form-modal {
-display: flex;
-flex-direction: column;
-padding: 24px;
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
 }
+
+.button-close {
+  width: 5%;
+  align-self: flex-end;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 24px;
+  height: 24px;
+  top: 24px;
+  right: 24px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-close:hover,
+.button-close:focus {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
+}
+.button-close-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-modal-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 16px;
+  color: #2e2f42;
+}
+.input-modal {
+  margin-bottom: 8px;
+}
+.modal-label {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
+}
+.input-wrap {
+  position: relative;
+}
+.input-column {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding-left: 38px;
+  outline: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-column:focus,
+.input-textarea:focus {
+  border-color: #4d5ae5;
+  fill: #4d5ae5;
+}
+.input-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea {
+  margin-bottom: 16px;
+}
+.input-textarea {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-checkbox {
+  margin-bottom: 24px;
+}
+.checkbox {
+  display: none;
+  margin-bottom: 24px;
+}
+.checkbox-icon {
+  border-radius: 4px;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: #f4f4fd;
+}
+.checkbox-icon:hover,
+.checkbox-icon:focus {
+  background-color: #4d5ae5;
+  fill: #f4f4fd;
+}
+
+.privacy {
+  text-decoration: underline;
+  color: #4d5ae5;
+}
+.privacy-label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.checkbox-item {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  border-radius: 2px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+.checkbox:checked + .checkbox-item {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
 .modal-btn-send {
+  font-family: 'Roboto', sans-serif;
+  line-height: 1.5;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.04em;
-  color: rgba(255, 255, 255, 1);
+  color: #ffffff;
   background-color: #4d5ae5;
   cursor: pointer;
   display: block;
@@ -514,66 +677,6 @@ padding: 24px;
 .modal-btn-send:hover {
   background-color: rgba(64, 75, 191, 1);
 }
-.hero-ba.modal-btn-send:focus {
+.modal-btn-send:focus {
   background-color: #404bbf;
 }
-.privacy {
-  text-decoration: underline;
-  color: #4d5ae5;
-}
-.checkbox {
-display: none;
-}
-.form-modal-title{
-  font-weight: 500;
-font-size: 16px;
-line-height: 150%;
-letter-spacing: 0.02em;
-text-align: center;
-margin-bottom: 16px;
-}
-.button-close {
-  width: 5%;
-  align-self: flex-end;
-  border-radius: 50%;
-  border: none;
-width: 24px;
-height: 24px;
-margin-bottom: 24px;
-
-}
-.button-close:hover,
-.button-close:focus {
-  background-color: #4d5ae5;
-  fill: #f4f4fd;
-}
-.checkbox-icon {
-  
-align-self: flex-start;
-border-radius: 4px;
-width: 16px;
-height: 16px;
-
-border-radius: 2px;
-border: 1px solid rgba(46, 47, 66, 0.4);
-fill: #f4f4fd;
-}
-.checkbox-icon:hover,
-.checkbox-icon:focus {
-  background-color: #4d5ae5;
-  fill: #f4f4fd;}
-  .input-modal{
-    margin-bottom: 8px;
-  }
-  .textarea{
-    margin-bottom: 16px;
-  }
-  .checkbox{
-    margin-bottom: 24px;
-  }
-  .privacy-label {
-font-weight: 400;
-font-size: 12px;
-line-height: 117%;
-letter-spacing: 0.04em;
-  }
