--- a/css/slyles.css
+++ b/css/slyles.css
@@ -436,6 +436,7 @@ footer {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: #ffffff;
+  padding-left: 16px;
 }
 .footer-input::placeholder {
   color: #ffffff;
@@ -586,6 +587,11 @@ footer {
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.input-icon:focus,
+.input-icon:hover {
+fill: #4D5AE5;
+}
+ 
 .textarea {
   margin-bottom: 16px;
 }
@@ -630,12 +636,19 @@ footer {
   color: #4d5ae5;
 }
 .privacy-label {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  gap: 6px;
 }
+
 .checkbox-item {
   width: 16px;
   height: 16px;
@@ -646,8 +659,10 @@ footer {
   align-items: center;
   justify-content: center;
   fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
-.checkbox:checked + .checkbox-item {
+input [type=checkbox]:checked + .checkbox-item {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
