--- a/css/slyles.css
+++ b/css/slyles.css
@@ -509,9 +509,9 @@ footer {
   transform: translate(-50%, -100%);
 }
 .form-modal {
-  display: flex;
+  
   flex-direction: column;
-  padding: 24px;
+  
 }
 
 .button-close {
@@ -617,14 +617,7 @@ fill: #4D5AE5;
   display: none;
   margin-bottom: 24px;
 }
-.checkbox-icon {
-  border-radius: 4px;
-  width: 16px;
-  height: 16px;
-  border-radius: 2px;
-  border: 1px solid rgba(46, 47, 66, 0.4);
-  fill: #f4f4fd;
-}
+
 .checkbox-icon:hover,
 .checkbox-icon:focus {
   background-color: #4d5ae5;
@@ -636,11 +629,7 @@ fill: #4D5AE5;
   color: #4d5ae5;
 }
 .privacy-label { 
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  position: absolute;
+  
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -650,20 +639,19 @@ fill: #4D5AE5;
 }
 
 .checkbox-item {
-  
+  display: inline-flex;
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
   border-radius: 2px;
-  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-input [type=checkbox]:checked + .privacy-label .checkbox-item {
+.checkbox:checked + .privacy-label>.checkbox-item {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
